myteo/test/analyze/type_check/tuple/indexing.exp
Error: Expected type `string` but found `int`
test/analyze/type_check/tuple/indexing.myte:34:3-7
 34 |   (x[0]: string);
    |    ^^^^

Error: Expected type `string` but found `int`
test/analyze/type_check/tuple/indexing.myte:35:3-8
 35 |   (x2[0]: string);
    |    ^^^^^

Error: Expected type `int` but found `(string, unit)`
test/analyze/type_check/tuple/indexing.myte:36:3-10
 36 |   (y[1][2]: int);
    |    ^^^^^^^

Error: Expected type `int` but found `Tup4`
test/analyze/type_check/tuple/indexing.myte:37:3-11
 37 |   (y2[1][2]: int);
    |    ^^^^^^^^

Error: Expected type `int` but found `string`
test/analyze/type_check/tuple/indexing.myte:38:3-13
 38 |   (y[1][2][0]: int); 
    |    ^^^^^^^^^^

Error: Expected type `int` but found `string`
test/analyze/type_check/tuple/indexing.myte:39:3-14
 39 |   (y2[1][2][0]: int); 
    |    ^^^^^^^^^^^